fixed overflow issue.

--- a/DreamTech/HTML/NGO/CSS/style.css
+++ b/DreamTech/HTML/NGO/CSS/style.css
@@ -19,6 +19,10 @@ html{
     font-size: 62.5%;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body{
     background-color: var(--background-color);
     color: var(--default-color);
@@ -826,8 +830,8 @@ header{
         text-align: center;
     }
     .input-area{
-        margin: 2rem 0 4rem 0;
         justify-content: space-between;
+        margin: 2rem 0 4rem 0;
         width: fit-content;
     }
     .input-area button,
